# knmi

./: .gitattributes  .gitignore  README.md  consts.py  data.py  justfile  main.py  pyproject.toml  requirements.txt  ruff.toml
bestanden/: knmi_cache.sqlite
src/: consts.py  data.py  main.py
