[tool.poetry]
name = "KNMI"
version = "0.1.0"
description = "Project waarin je werkt met KNMI-gegevens, behorende bij tutorials op python-cursus.nl"
authors = ["Erwin Matijsen <erwin@python-cursus.nl>"]
readme = "README.md"
packages = [
    {include = "src"},
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
requests-cache = "^1.2.0"
pandas = "^2.2.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
ruff = "^0.3.0"
types-requests = "^2.31.0.20240311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
